fix logo width on mobile

--- a/src/FileUploader.module.scss
+++ b/src/FileUploader.module.scss
@@ -29,3 +29,15 @@
 .selectButton:hover {
   text-decoration: underline;
 }
+
+.logo {
+  width: 500px;
+
+  @media (max-width: 900px) {
+    width: 400px;
+  }
+
+  @media (max-width: 600px) {
+    width: 320px;
+  }
+}
